# CONTRABASS

./: .gitignore  CITATION.cff  README.md  requirements.txt  setup.cfg  setup.py  sonar-project.properties  test.sh
.github/workflows/: main.yml
docs/source/: CORE.ipynb  ComputeGrowthDependent.rst  ComputeVulnerabilities.rst  Installation.rst  Introduction.rst  License.rst  OnlineWebApp.rst  Pseudocode.rst  RefineModelWithFVA.rst  RemoveDeadEndMetabolites.rst  ToolCommands.rst  ToolParameters.rst  conf.py  developer-documentation.ipynb  index.rst  output.xls  report.html
results/iAM-Pf480/: iAM-Pf480-growth-dependent.html
scripts/: contrabass
src/contrabass/: __init__.py
src/contrabass/cli/: commands.py  main.py  utils.py
src/contrabass/core/: CobraMetabolicModel.py  Facade.py  FacadeThread.py  FacadeUtils.py  Spreadsheet.py  State.py  __init__.py  report_utils.py  util.py
src/contrabass/core/templates/: .gitignore
src/contrabass/core/templates/html/: template.html  template_cp.html
src/contrabass/core/utils/: CriticalCPConfig.py  CustomLogger.py  GrowthDependentCPConfig.py
test/: generate_datatest.py  requirements.txt  test_contrabass_cli.py  test_findCPcli.py  test_spreadsheet.xls
test/data/: test_verbose_chokepoint_computation_on_model.txt  test_verbose_output_on_model.txt
test/test_cli/: generate_datatest.py  model_fva_flux.json  model_without_dem.xml  test_contrabass_cli.py
test/test_core/: generate_data.py  test_CobraMetabolicModel.py
test/test_core/data/: MODEL1507180056_url.xml
