[metadata]
name = contrabass
url = https://github.com/openCONTRABASS/CONTRABASS
version = 0.2.0
author = Alex Oarga
author_email = 718123@unizar.es
description = Constraint-based model vulnerabilities analysis
long_description = file: README.md, CHANGELOG.rst, LICENSE
long_description_content_type = text/markdown
;keywords = one, two
license = GNU General Public License v3 or later (GPLv3+)
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
python_requires = >=3.5

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
	= src
install_requires =
    cobra==0.16.0
    click
    depinfo
    python-dotenv
    future
    Jinja2
    mpmath
    numpy>=1.16.5
    optlang>=1.4.2
    pandas>=0.17.0
    python-dateutil
    python-libsbml
    python-libsbml-experimental==5.18.0
    pytz
    ruamel.yaml>=0.15
    setuptools
    six
    swiglpk
    sympy
    tabulate
    xlwt==1.3.0
    six

[options.package_data]
* = *.txt, *.rst, *.md
contrabass.core.templates.html =
	*.html

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    contrabass = contrabass.cli.main:contrabass
